commit to master

--- a/test.html
+++ b/test.html
@@ -5,6 +5,6 @@
   <script>tinymce.init({ selector:'textarea' });</script>
 </head>
 <body>
-  <textarea>Easy (and free!) You should check out our premium features.</textarea>
+  <textarea>Easy master (and free!) You should check out our premium features.</textarea>
 </body>
 </html>
